Addition of API key to securise API access